// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AccordionHeader renders a default state 1`] = `
<div
  class="group/fui-accordion-header"
  data-expand-icon-position="start"
  data-size="medium"
>
  <button
    aria-expanded="false"
    class=""
    type="button"
  >
    <span
      aria-hidden="true"
      class=""
    >
      <svg
        aria-hidden="true"
        class="fui-Icon"
        data-fui-icon=""
        fill="currentColor"
        height="1em"
        style="transform: rotate(0deg); transition: transform 200ms ease-out;"
        viewBox="0 0 20 20"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.47a.5.5 0 0 1-.7-.71L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7"
          fill="currentColor"
        />
      </svg>
    </span>
    Default AccordionHeader
  </button>
</div>
`;

exports[`AccordionHeader renders when expandIcon is null 1`] = `
<div
  class="group/fui-accordion-header"
  data-expand-icon-position="start"
  data-size="medium"
>
  <button
    aria-expanded="false"
    class=""
    type="button"
  >
    Default AccordionHeader
  </button>
</div>
`;
